наладила цсс/поменяла параллакс/настроила бэкграунд

--- a/index.html
+++ b/index.html
@@ -16,15 +16,22 @@
   data-invert-y="true"
   data-limit-x="false"
   data-limit-y="false"
-  data-scalar-x="2"
-  data-scalar-y="8"
-  data-friction-x="0.1"
-  data-friction-y="0.2"
+  data-scalar-x="11"
+  data-scalar-y="14"
+  data-friction-x="1"
+  data-friction-y="1"
   data-origin-x="0.0"
   data-origin-y="1.0">
-  <li class="layer" id="sailor" data-depth="0.20"><img src="images/sailor.png"></li>
-  <li class="layer" id="seagull1" data-depth="0.70"><img src="images/seagull1.png"></li>
-  <li class="layer" id="seagull2" data-depth="0.89"><img src="images/seagull2.png"></li>
+  <li id="logo" class="layer" data-depth="0.30"><img src="images/logo.png"></li>
+  <li id="lighter" class="layer" data-depth="0.10"><img src="images/lighter_bg.png"></li>
+  <li id="wave" class="layer" data-depth="0.11"><img src="images/wave_backcopy.png"></li>
+  <li id="wave" class="layer" data-depth="0.12"><img src="images/wave_2.png"></li>
+  <li id="wave" class="layer" data-depth="0.14"><img src="images/wave3.png"></li>
+  <li id="wave" class="layer" data-depth="0.16"><img src="images/wave4.png"></li>
+  <li id="wave" class="layer" data-depth="0.18"><img src="images/wave5.png"></li>
+  <li class="layer" id="sailor" data-depth="0.40"><img src="images/sailor.png"></li>
+  <li class="layer" id="seagull1" data-depth="0.9"><img src="images/seagull1.png"></li>
+  <li class="layer" id="seagull2" data-depth="1"><img src="images/seagull2.png"></li>
   </ul>
   </div>
   <script src="js/parallax.js"></script>
