--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="js/jquery.js"></script>
   </head>
   <body>
+  <div class="down"></div>
   <div id="container" class="container">
   <ul id="scene" class="scene"
   data-calibrate-x="true"
@@ -16,15 +17,20 @@
   data-invert-y="true"
   data-limit-x="false"
   data-limit-y="false"
-  data-scalar-x="2"
+  data-scalar-x="10"
   data-scalar-y="8"
   data-friction-x="0.1"
   data-friction-y="0.2"
   data-origin-x="0.0"
   data-origin-y="1.0">
+  <li class="layer" id="lights" data-depth="0.40"><img src="images/lights.png"></li>
+  <li class="layer" id="logo" data-depth="0.60"><img src="images/logo.png"></li>
   <li class="layer" id="sailor" data-depth="0.20"><img src="images/sailor.png"></li>
-  <li class="layer" id="seagull1" data-depth="0.70"><img src="images/seagull1.png"></li>
-  <li class="layer" id="seagull2" data-depth="0.89"><img src="images/seagull2.png"></li>
+  <li class="layer" id="clouds" data-depth="0.40"><img src="images/clouds_bg.png"></li>
+  <li class="layer" id="land" data-depth="0.10"><img src="images/bg_land.png"></li>
+  <li class="layer" id="lighter" data-depth="0.40"><img src="images/lighter_bg.png"></li>
+  <li class="layer" id="seagull1" data-depth="1.00"><img src="images/seagull1.png"></li>
+  <li class="layer" id="seagull2" data-depth="1.00"><img src="images/seagull2.png"></li>
   </ul>
   </div>
   <script src="js/parallax.js"></script>
